--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,11 @@ jobs:
             python -m pip install --upgrade pip
             pip install -r requirements.txt
       - run:
+          name: Debug - Check requests installation
+          command: python -c "import requests; print('Requests version:', requests.__version__)"
+      - run:
           name: Run unit tests
-          command: |
-            python -m unittest discover
+          command: python -m unittest discover
 
 workflows:
   version: 2
